--- a/deploy/index.html
+++ b/deploy/index.html
@@ -12,6 +12,6 @@
 </head>
 <body>
 <h1>Staging Environment</h1>
-<p>This is being deployed by Argo.</p>
+<p>This is being deployed by Chetan.</p>
 </body>
 </html>
